--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,6 +10,7 @@
 analyzer:
   errors:
     equal_keys_in_map: ignore
+    prefer_const_constructors: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
