--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,57 +1,32 @@
 name: agenda_crud
-description: Uma nova aplicação Flutter
+description: A new Flutter project.
 
-# Versão do SDK Flutter
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+
+version: 1.0.0+1
+
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
-  # Adicione outras dependências do Flutter aqui
+  sqflite: ^2.0.0+4
+  path: ^1.8.0
   cupertino_icons: ^1.0.2
-
-  # Firebase e Firestore
-  firebase_core: ^2.15.0
-  cloud_firestore: ^4.8.0
-
-  # GetIt para injeção de dependência
-  get_it: ^7.6.0
-
-  # MobX para gerenciamento de estado
-  mobx: ^2.1.1+4
-  flutter_mobx: ^2.0.6+4
-
-  # url_launcher para abrir URLs
-  url_launcher: ^6.1.8
-
-  # sqflite para banco de dados local SQLite
-  sqflite: ^2.2.8+1
-
-  # mask_text_input_formatter para formatação de entrada de texto
-  mask_text_input_formatter: ^2.0.0
+  get_it: ^7.0.0
+  mobx: ^2.0.1
+  flutter_mobx: ^2.0.1+4
+  mask_text_input_formatter: ^2.1.0
+  cloud_firestore: ^3.1.5
+  firebase_core: ^1.10.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # Adicione outras dependências de desenvolvimento aqui
-  build_runner: ^2.3.3
-  mobx_codegen: ^2.0.7+4
-
 flutter:
   uses-material-design: true
 
-  # Adicione ativos aqui se necessário
   assets:
     - assets/
-
-  # Adicione fontes aqui se necessário
-  fonts:
-    - family: Roboto
-      fonts:
-        - asset: fonts/Roboto-Regular.ttf
-        - asset: fonts/Roboto-Bold.ttf
-          weight: 700
-
